test/conformance/kuttl/mutate/refactor/add-volume-deployment/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-volume
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
